# NetHawk

./: .gitignore  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Makefile  README.md  js.txt  pyproject.toml  pytest.ini  results.json  test.py
docs/: README.md  SUMMARY.md  installation.md  modules.md
nethawk/: __init__.py
nethawk/cli/: __init__.py  banner.py  nethawk.py  options.py
nethawk/core/: config.py  context.py  exception.py  logger.py  models.py  models.py.old  mongodb.py  registry.py  resolver.py  utils.py
nethawk/extensions/crawler/: crawler.py  middlewares.py
nethawk/extensions/detectors/tech/: ai.py  (+2 more)
nethawk/extensions/dispatcher/: __init__.py  engine.py
nethawk/extensions/exploit/: cve_suggester.py
nethawk/extensions/fuzzer/: __init__.py  dir.py  utils.py  vhost.py
nethawk/extensions/google/: __init__.py
nethawk/extensions/modules/: __init__.py  discovery.py  protocols.py
nethawk/extensions/network/: highlight.py  scanner.py  service_scanner.py  utils.py
nethawk/extensions/resolver/: constants.py  resolver.py  utils.py
nethawk/helper/: db.py  dns.py  output.py  types.py
nethawk/modules/: __init__.py
nethawk/modules/discovery/: __init__.py  nmap.py
nethawk/modules/protocols/: __init__.py
nethawk/services/handler/: __init__.py
resources/: help.yaml
resources/config/: config.yaml
resources/profiles/: ctf.yaml
tests/: conftest.py
tests/dry_run/: test_config.py
tests/dry_run/dispatcher/: test_dispatcher.py  test_service_discovery.py  test_service_listeners.py  test_service_modules.py
tests/dry_run/modules/: test_module.py
(+12 files in other folders)
